--- a/Server/config/config.json
+++ b/Server/config/config.json
@@ -14,9 +14,9 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
+    "username": "pku",
+    "password": "ezNe_a86o*6_34,1",
+    "database": "pku",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
