--- a/Server/config/config.json
+++ b/Server/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
-    "username": "root",
-    "password": "root",
+    "username": "pku",
+    "password": "ezNe_a86o*6_34,1",
     "database": "pku",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": "root",
+    "username": "pku",
+    "password": "ezNe_a86o*6_34,1",
     "database": "pku",
     "host": "127.0.0.1",
     "dialect": "mysql"
