--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "cache": "npm cache clean --force"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
