--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "*",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "form-serialize": "^0.7.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
+    "recharts": "^2.0.9",
     "sequelize": "^6.6.2",
     "web-vitals": "^1.1.2"
   },
