--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "react-1",
+  "name": "pku",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/data-grid": "*",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "*",
     "@testing-library/jest-dom": "^5.13.0",
@@ -17,6 +18,8 @@
     "mysql2": "^2.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-localization": "^1.0.17",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "recharts": "^2.0.9",
     "sequelize": "^6.6.2",
@@ -45,5 +48,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "https://pku@pku-smart-sensors.eu/plesk-git/pku-smart-sensors.eu.git"
+  },
+  "keywords": [
+    "smart",
+    "sensors"
+  ],
+  "author": "",
+  "license": "ISC"
 }
