--- a/src/config.json
+++ b/src/config.json
@@ -1,9 +1,9 @@
 {
     "project_name" : "PKU - Smart Sensors",
 
-    "_base_url" : "https://pku-smart-sensors.eu/api",
+    "base_url" : "https://pku-smart-sensors.eu/api",
     "__base_url" : "http://localhost:8080/api",
-    "base_url" : "http://192.168.3.9:8080/api"
+    "__base_url" : "http://192.168.3.9:8080/api"
 
    
 
