--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-recaptcha": "^5.0.2",
     "form-serialize": "^0.7.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-localization": "^1.0.17",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^1.1.5",
     "recharts": "^2.0.9",
     "sequelize": "^6.6.2",
     "web-vitals": "^1.1.2"
