--- a/src/config.json
+++ b/src/config.json
@@ -1,8 +1,8 @@
 {
     "project_name" : "PKU - Smart Sensors",
 
-    "__base_url" : "https://pku-smart-sensors.eu/api",
-    "base_url" : "http://localhost:8080/api",
+    "base_url" : "https://pku-smart-sensors.eu/api",
+    "__base_url" : "http://localhost:8080/api",
     "_base_url" : "http://192.168.3.9:8080/api" , 
 
     "recaptchaSitekey" : "6LeUClQbAAAAALNUZaOKN-nk0dJ-jU88T1JX-rLX"
