--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "express": "^4.17.1",
     "express-recaptcha": "^5.0.2",
     "form-serialize": "^0.7.2",
+    "generate-password": "^1.6.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
